# GmodDotNet.SourceSDK

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  SourceSDK.sln  cpp.hint  nuget.config
.github/workflows/: build.yml  test.lua
GetRenderTargetExample/: GetRenderTargetExample.csproj  GetRenderTargetExampleModule.cs
SourceSDK/: EntryPoints.cs  GmodNET.SourceSDK.csproj  NativeLibraryResolver.cs  SourceSDK.csproj  SymbolResolver.cs  VariableArgument.cs
SourceSDK.CAPI/: CMakeLists.txt  SourceSDK.CAPI.cpp  SourceSDK.CAPI.h  dbg_c.cpp  filesystem_c.cpp  iappsystem_c.cpp
SourceSDK.CAPI/VGuiMatSurface/: IMatSystemSurface_c.cpp
SourceSDK.CAPI/materialsystem/: imaterialsystem_c.cpp  imaterialsystemhardwareconfig_c.cpp  itexture_c.cpp
SourceSDK.CAPI/vgui/: isurface_c.cpp
SourceSDK.Test/: SourceSDK.Test.csproj  TestModule.cs
SourceSDK/public/: Color.cs  filesystemh.cs
SourceSDK/public/VGuiMatSurface/: IMatSystemSurface_h.cs
SourceSDK/public/appframework/: iappsystem.cs
SourceSDK/public/bitmap/: imageformat_declarations.cs
SourceSDK/public/materialsystem/: IMaterialSystemHardwareConfig.cs  ITexture.cs  imaterialsystemh.cs
SourceSDK/public/tier0/: dbg.cs
SourceSDK/public/tier1/: checksum_md5.cs
SourceSDK/public/vgui/: isurface.cs
SourceSDK/public/vtf/: vtf_declarations_H.cs
SourceSDK/src/: Color.cs
SourceSDK/src/tier0/: dbg.cs
SourceSDK/tier1/: interfaceh.cs
